5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3392/executions/1578_1326.log
== TEST (2019-03-20 18:37:32) 
-- CODE:
impult(s=40)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    impult(s=40)
NameError: name 'impult' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:38:14) 
-- CODE:
impult(s=40)
-- EXECUTION TIME:
0.175718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    impult(s=40)
NameError: name 'impult' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:32) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:45) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:43:07) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.192967
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
